--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
     </header>
 
     <!-- about section -->
-    <section id="about--section">
-        <h1 class="abtou--heading">About Me</h1>
+    <section id="about-section">
+        <h1 class="heading">About Me</h1>
 
-        <div class="about--container">
-            <div class="about--image-container">
-                <div class="about--component-square"></div>
-                <img src="assets/img/about.png" alt="image about me" class="about--image">
-                <div class="about--social-links">
-                    <a href="#"><img src="assets/img/github.png" alt="github logo" class="about--image-social"></a>
-                    <a href="#"><img src="assets/img/insta.png" alt="instagram logo" class="about--image-social"></a>
-                    <a href="#"><img src="assets/img/fb.png" alt="facebook logo" class="about--image-social"></a>
-                    <a href="#"><img src="assets/img/twitter.png" alt="twitter logo" class="about--image-social"></a>
-                    <a href="#"><img src="assets/img/linked.png " alt="linked logo" class="about--image-social"></a>
+        <div class="about__container">
+            <div class="about__image_container">
+                <div class="component__square"></div>
+                <img src="assets/img/about.png" alt="image about me" class="about__image">
+                <div class="about__social_links">
+                    <a href="#"><img src="assets/img/github.png" alt="github logo" class="about__image_social"></a>
+                    <a href="#"><img src="assets/img/insta.png" alt="instagram logo" class="about__image_social"></a>
+                    <a href="#"><img src="assets/img/fb.png" alt="facebook logo" class="about__image_social"></a>
+                    <a href="#"><img src="assets/img/twitter.png" alt="twitter logo" class="about__image_social"></a>
+                    <a href="#"><img src="assets/img/linked.png " alt="linked logo" class="about__image_social"></a>
                 </div>
             </div>
 
             <!-- info part -->
-            <div class="about--info-container">
+            <div class="about__info_container">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                <a href="#" class="btn">hire me</a>
-                <a href="#" class="btn">Download CV</a>
+                <a href="#" class="button">hire me</a>
+                <a href="#" class="button">Download CV</a>
             </div>
         </div>
 
@@ -130,11 +130,11 @@
     <section id="project-section">
         <h1 class="heading">Projects</h1>
 
-        <div class="filter">
-            <button class="btn active">all</button>
-            <button class="btn">css</button>
-            <button class="btn">javascript</button>
-            <button class="btn">Fullstack</button>
+        <div class="project__filter">
+            <button class="button button__state_active">all</button>
+            <button class="button">css</button>
+            <button class="button">javascript</button>
+            <button class="button">Fullstack</button>
         </div>
 
 
@@ -151,7 +151,7 @@
             <input type="email" name="email" id="email" placeholder="email">
             <input type="text" name="subject" id="subject" placeholder="subject">
             <textarea name="message" id="message" cols="30" rows="10" placeholder="message"></textarea>
-            <button class="contact-btn">contact</button>
+            <button class="contact_buttton">contact</button>
         </div>
     </section>
     <script src="./project.js"></script>
