change css use scss

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2 class="sub-heading">skill</h2>
 
         <div class="skills">
-            <p class="skill-name">HTML</p>
+            <p class="button">HTML</p>
             <p class="skill-name">CSS</p>
             <p class="skill-name">Javascript</p>
             <p class="skill-name">Rezct.js</p>
